поменял немного строение проекта

--- a/JohnyStoreApi/JohnyStoreApi/appsettings.json
+++ b/JohnyStoreApi/JohnyStoreApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Paths": {
-    "PathDirectoryPictureForSneaker": "/"
+    "PathDirectoryPictureForSneaker": "_Pictures/SneakerPictures"
   },
   "BaseUrl": {
     "Url": "https://localhost:0000/api"
