--- a/JohnyStoreApi/JohnyStoreApi/JohnyStoreApi.csproj
+++ b/JohnyStoreApi/JohnyStoreApi/JohnyStoreApi.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="_Pictures\SneakerPictures\" />
   </ItemGroup>
 
 </Project>
