Добавил CRUD для стилей и добавмл Авторизацию, Аутентификацию

--- a/JohnyStoreApi/JohnyStoreApi/appsettings.json
+++ b/JohnyStoreApi/JohnyStoreApi/appsettings.json
@@ -1,6 +1,13 @@
 {
+  "JwtSettings": {
+    "SecretKey": "b52850cd-8cce-4fd3-9080-22eb417c4517"
+  },
+  "Domains": {
+    "ClientDomain": "https://example.com"
+  },
   "Paths": {
-    "PathDirectoryPictureForSneaker": "_Pictures/SneakerPictures"
+    "PathDirectoryPictureForSneaker": "_Pictures/SneakerPictures",
+    "PathDirectoryPictureForBrand": "_Pictures/BrandPictures"
   },
   "BaseUrl": {
     "Url": "https://localhost:0000/api"
