--- a/JohnyStoreApi/JohnyStoreApi/JohnyStoreApi.csproj
+++ b/JohnyStoreApi/JohnyStoreApi/JohnyStoreApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="_Pictures\SneakerPictures\" />
+    <Folder Include="_Pictures\BrandPictures\" />
   </ItemGroup>
 
 </Project>
