готовый апи для тестирования

--- a/JohnyStoreApi/JohnyStoreApi/appsettings.json
+++ b/JohnyStoreApi/JohnyStoreApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Mail": {
+    "Login": "sgyxa.ru@mail.ru",
+    "Password": "TEc8U7XTrCw1QusKrFRg",
+    "SmtpAddress": "smtp.mail.ru",
+    "SmtpPort": "587"
+  },
   "JwtSettings": {
     "SecretKey": "b52850cd-8cce-4fd3-9080-22eb417c4517"
   },
