--- a/JohnyStoreApi/JohnyStoreApi/appsettings.json
+++ b/JohnyStoreApi/JohnyStoreApi/appsettings.json
@@ -9,14 +9,14 @@
     "SecretKey": "b52850cd-8cce-4fd3-9080-22eb417c4517"
   },
   "Domains": {
-    "ClientDomain": "https://example.com"
+    "ClientDomain": "http://localhost:5173"
   },
   "Paths": {
     "PathDirectoryPictureForSneaker": "_Pictures/SneakerPictures",
     "PathDirectoryPictureForBrand": "_Pictures/BrandPictures"
   },
   "BaseUrl": {
-    "Url": "https://a21612-892c.k.d-f.pw/api"
+    "Url": "https://a21802-33e1.s.d-f.pw/api"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=217.28.223.127,17160;User Id=user_cd156;Password=r$3GNi}52Fm?Td;Database=db_d564d;MultiSubnetFailover=True;Encrypt=False;"
